logs/Slang/generic/class/class_test_45.sv.log
name: class_test_45
description: Test
should_fail: 0
tags: 6.15 8.3
files: /home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_45.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_45.sv:7:1: error: language feature not yet supported
class macros_as_class_item;
^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_45.sv:8:2: error: unknown macro or compiler directive '`uvm_object_param_utils_begin'
 `uvm_object_param_utils_begin(my_class)
 ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_45.sv:9:4: error: unknown macro or compiler directive '`uvm_field_int'
   `uvm_field_int(blah1, F1)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_45.sv:10:4: error: unknown macro or compiler directive '`uvm_field_real'
   `uvm_field_real(blah2, F2)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_45.sv:11:4: error: unknown macro or compiler directive '`uvm_field_enum'
   `uvm_field_enum(blah3, F3)
   ^
../../home/travis/build/SymbiFlow/sv-tests/tests/generic/class/class_test_45.sv:12:2: error: unknown macro or compiler directive '`uvm_object_utils_end'
 `uvm_object_utils_end
 ^
